# config-models

./: .dockerignore  .gitignore  .tool-versions  .travis.yml  BUILD  Makefile  README.md  VERSION  WORKSPACE  go.mod  go.sum
.reuse/: dep5
.ssh/: id_rsa.enc
cmd/: copylibandstay.go
cmd/dummy/: dummy.go
cmd/empty/: empty.go
cmd/model-compiler/: main.go
deprecated-modelplugin/aether-2.0.0/: Makefile  README.md  generator.sh  go.mod  go.sum
deprecated-modelplugin/aether-3.0.0/: README.md
deprecated-modelplugin/aether-4.0.0/: generator.sh  go.sum
deprecated-modelplugin/devicesim-1.0.0/: go.sum
deprecated-modelplugin/plproxy-1.0.0/: Makefile  README.md
deprecated-modelplugin/testdevice-1.0.0/: Makefile  generator.sh
deprecated-modelplugin/testdevice-2.0.0/: Makefile  generator.sh
modelplugin/: ric-1.0.0.env
modelplugin/aether-1.0.0/: Makefile  README.md  aether-1.0.0-openapi3.yaml  aether-1.0.0.tree  aether.tree  generator.sh  go.mod  go.sum  modelmain.go
modelplugin/aether-2.0.0/: Makefile  README.md  aether-2.0.0.tree  aether.tree  generator.sh  go.mod  go.sum  modelmain.go
modelplugin/aether-2.1.0/: Makefile  README.md  aether-2.1.0.tree  generator.sh  go.mod  go.sum  modelmain.go
modelplugin/aether-2.2.0/: Makefile  aether-2.2.0.tree  generator.sh  go.mod  modelmain.go
modelplugin/aether-3.0.0/: Makefile  README.md  description.md  generator.sh  go.mod  go.sum  modelmain.go
modelplugin/aether-4.0.0/: Makefile  description.md  generator.sh  go.mod  modelmain.go
modelplugin/aether-5.0.0/: Makefile  generator.sh  go.mod  modelmain.go
modelplugin/devicesim-1.0.0/: BUILD.bazel  Makefile  devicesim-1.0.0.tree  generator.sh  go.mod  go.sum  metadata.yaml  modelmain.go
modelplugin/devicesim-1.0.0/devicesim_1_0_0/: generated.go
modelplugin/e2node-1.0.0/: Makefile  generator.sh  go.mod  go.sum  modelmain.go
modelplugin/enterprise-1.0.0/: Makefile  enterprise.tree  generator.sh  go.mod  modelmain.go
modelplugin/plproxy-1.0.0/: generator.sh  go.mod  go.sum  modelmain.go  plproxy-1.0.0.tree
models/devicesim/: go.sum  (+2 more)
templates/: Dockerfile.tpl  Makefile.tpl  gnmi-gen.go.tpl  go.mod.tpl  main.go.tpl  model.go.tpl  openapi-gen.go.tpl  paths.go.tpl  plugin.go.tpl
test/: generated.sh  model-version.sh
yang-base/: ietf-inet-types.yang  onf-extension-types@2022-12-12.yang
(+526 files in other folders)
